main added auth.

--- a/DataWarehouseService/appsettings.json
+++ b/DataWarehouseService/appsettings.json
@@ -12,11 +12,11 @@
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/{0}/v2.0/.well-known/openid-configuration",
     "Tenant": "marselisborgit.onmicrosoft.com",
-    "ClientId": "c64cde9e-bd29-452e-badc-e587cb92abba",
+    "ClientId": "a943d3eb-6a9e-4d13-8a64-65232acdd793",
     "issuerToValidate": "https://login.microsoftonline.com/84bc7fba-b1da-48f9-aa45-a1542279f9e9/v2.0",
     "Audience": "https://marselisborgit.onmicrosoft.com/viregosonie",
     "SignUpSignInPolicyId": "B2C_1A_signup_signin_kombit_virego",
-    "ReadScope": "virego.read",
+    "ReadScope": "DatawarehouseRead",
     "WriteScope": "write",
     "domain": "marselisborgit.onmicrosoft.com"
   },
