--- a/DataWarehouseService/appsettings.json
+++ b/DataWarehouseService/appsettings.json
@@ -10,13 +10,13 @@
     "sonie": ""
   },
   "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/{0}/v2.0/.well-known/openid-configuration",
+    "Instance": "https://marselisborgit.b2clogin.com/{0}/{1}/v2.0/.well-known/openid-configuration",
     "Tenant": "marselisborgit.onmicrosoft.com",
     "ClientId": "a943d3eb-6a9e-4d13-8a64-65232acdd793",
     "issuerToValidate": "https://login.microsoftonline.com/84bc7fba-b1da-48f9-aa45-a1542279f9e9/v2.0",
     "Audience": "https://marselisborgit.onmicrosoft.com/viregosonie",
     "SignUpSignInPolicyId": "B2C_1A_signup_signin_kombit_virego",
-    "ReadScope": "DatawarehouseRead",
+    "ReadScope": "virego.read",
     "WriteScope": "write",
     "domain": "marselisborgit.onmicrosoft.com"
   },
